# seT5

./: .gitignore  .gitmodules  ANALYSIS_OF_TEST_SUITE_CODE.md  ARCHITECTURE.md  Angie_Wang_mixed_radix.md  BATCH_97_98_COMPLETION_REPORT.md  BATCH_GENERATION_GUIDE.md  BLOG_2602210118.md  BLOG_2602210119.md  BLOG_2602211340.md  Build_AndTest_Verified_Modules_for_seT6_Updates.md  CHANGELOG.md  CHINA_CARBON_NONBINARY_AI_CHIPS_RESEARCH.md  CONTRIBUTING.md  CROWN_JEWELS.md  DAILY_SEARCH_LOG_2026-02-17.md  DAILY_SEARCH_LOG_2026-02-18.md  DOCS_INDEX.md  DYNAMIC_EPISTEMIC_LOGIC_DEL_EXTENSIONS.md  Dockerfile  FEB_18_TEST_INSTRUCTIONS.md  GENERATION_PROGRESS.md  GROKIPEDIA_NOTES_FOR_SET6.md  HOW_TO_BENEFIT_ALL_ASAP.md  HUAWEI_2025_TERNARY_CHIP_PATENT_CN119652311A.md  HYBRID_EPISTEMIC_ONTOLOGICAL_MODAL_LOGIC.md  INCREASE_FUNCTIONAL_UTILITY.md  INDIC_EPISTEMOLOGY_COUNCIL_INTELLIGENCE.md  INITIAL_PROJECT_ANSWERS.MD  Intel_Loihi_WO2016199157A1.md  Isabelle2025-2  LOGICAL_ENHANCEMENTS_FOR_TRIT_LINUX.md  Makefile  OLD_TODOS_LOG_ARCHIVE.md  OVERVIEW_AS_OF_2602201606.md  RADIX_LEAP_AND_WHY_TAYLOR_METHOD.md  README.md  RSI_OPTIMIZATION_INSTRUCTIONS.md  SECURITY_AUDIT_VULN63_PLUS.md  SET6_BECOMES_A_GODEL_MACHINE.md  (+124 more)
.devcontainer/: devcontainer.json
TEST_RESULTS/: .gitignore
demo/: clang_trit_demo.c  trit_demo  trit_emu_bench  trit_emu_bench.c  trit_type_demo  trit_type_demo.c
docs/: Doxyfile  GODEL_MACHINE_SPEC.md  HYNIX_TCAM_INTEGRATION.md  INGOLE_WO2016199157A1_INTEGRATION.md  index.rst  (+4 more)
replication_pack/seT5_original/trithon/: __init__.py  pyproject.toml  trithon.py  trithon_ext.c
(+909 files in other folders)
