[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "trithon"
version = "0.1.0"
description = "Python bindings for seT5 balanced ternary operations"
license = "GPL-2.0"
requires-python = ">=3.8"

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
